<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="#ffffff" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="15dp" android:paddingEnd="15dp">
    <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/secondaryTextColor" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/scan_document" android:layout_marginStart="5dp" android:layout_marginEnd="5dp"/>
    <EditText android:layout_gravity="center" android:id="@+id/dialog_text_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:hint="@string/enter_file_name"/>
    <LinearLayout android:layout_gravity="bottom|right|center_vertical|center_horizontal|center|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp">
        <Button android:textSize="16sp" android:textStyle="bold" android:textColor="@color/secondaryTextColor" android:gravity="center" android:id="@+id/skip_btn" android:background="@color/whiteColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="80dp" android:minHeight="40dp" android:text="@string/skip" android:textAllCaps="false" android:layout_marginEnd="8dp" android:stateListAnimator="@null"/>
        <Button android:textSize="16sp" android:textStyle="bold" android:textColor="@color/secondaryTextColor" android:id="@+id/dialog_cancel_btn" android:background="@drawable/round_btn_dialog_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="80dp" android:minHeight="40dp" android:text="@string/cancel" android:textAllCaps="false" android:layout_marginEnd="8dp" android:stateListAnimator="@null"/>
        <Button android:textSize="16sp" android:textStyle="bold" android:textColor="@color/primaryLightColor" android:id="@+id/dialog_ok_btn" android:background="@drawable/round_btn_dialog_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="80dp" android:minHeight="40dp" android:text="@string/enter" android:textAllCaps="false" android:stateListAnimator="@null"/>
    </LinearLayout>
</LinearLayout>
