<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar_setting2_act" android:background="@color/primaryColor" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" app:theme="@style/ToolbarTheme"/>
    <TextView android:textSize="22sp" android:textColor="@color/primaryColor" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/general"/>
    <View style="@style/Divider"/>
    <LinearLayout android:id="@+id/quality_ll" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18sp" android:textColor="#000000" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/image_quality" android:layout_weight="1"/>
        <TextView android:textSize="18sp" android:id="@+id/quality_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/quality_label_sd"/>
    </LinearLayout>
</LinearLayout>