<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@android:color/black" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="15sp" android:textColor="#000000" android:layout_gravity="center_horizontal" android:id="@+id/img_count_img_pager" android:background="@drawable/round_edittext6" android:paddingTop="4dp" android:paddingBottom="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="0/0" android:alpha="0.7" android:paddingStart="10dp" android:paddingEnd="10dp"/>
    <androidx.viewpager2.widget.ViewPager2 android:layout_gravity="center" android:id="@+id/viewPagerImageSlider" android:background="@android:color/black" android:layout_width="100dp" android:layout_height="100dp"/>
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@+id/bar_image_pager" android:background="@drawable/round_edittext3" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="50dp" android:layout_marginEnd="50dp">
        <TextView android:textSize="15sp" android:gravity="center" android:padding="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/processing_images"/>
        <ProgressBar android:layout_gravity="center" android:id="@+id/load_bar_ip" android:padding="4dp" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@+id/filterBar" android:visibility="invisible" android:clickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="100dp" android:paddingStart="20dp" android:paddingEnd="20dp">
        <Button android:textSize="15sp" android:textColor="@android:color/primary_text_dark" android:id="@+id/original_filter_btn" android:layout_width="80dp" android:layout_height="wrap_content" android:text="@string/original" android:drawableTop="@drawable/ic_baseline_filter_hdr_24" android:layout_weight="1" android:textAllCaps="false" android:stateListAnimator="@null" android:backgroundTint="@android:color/secondary_text_light"/>
        <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <Button android:textSize="15sp" android:textColor="@android:color/primary_text_dark" android:id="@+id/grey_filter_btn" android:layout_width="80dp" android:layout_height="wrap_content" android:text="@string/gray" android:drawableTop="@drawable/ic_baseline_filter_hdr_24" android:layout_weight="1" android:textAllCaps="false" android:stateListAnimator="@null" android:backgroundTint="@android:color/secondary_text_light"/>
        <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <Button android:textSize="15sp" android:textColor="@android:color/primary_text_dark" android:id="@+id/bw_filter_btn" android:layout_width="80dp" android:layout_height="wrap_content" android:text="@string/b_and_w" android:drawableTop="@drawable/ic_baseline_filter_hdr_24" android:layout_weight="1" android:textAllCaps="false" android:stateListAnimator="@null" android:backgroundTint="@android:color/secondary_text_light"/>
        <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <Button android:textSize="15sp" android:textColor="@android:color/primary_text_dark" android:id="@+id/magic_filter_btn" android:layout_width="80dp" android:layout_height="wrap_content" android:text="@string/magic" android:drawableTop="@drawable/ic_baseline_filter_hdr_24" android:layout_weight="1" android:textAllCaps="false" android:stateListAnimator="@null" android:backgroundTint="@android:color/secondary_text_light"/>
    </LinearLayout>
    <LinearLayout android:layout_gravity="bottom" android:background="@color/primaryColor" android:paddingTop="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="5">
        <Button android:textSize="12sp" android:textColor="@android:color/primary_text_dark" android:id="@+id/delete_btn" android:background="@color/primaryColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delete" android:drawableTop="@drawable/ic_delete" android:layout_weight="1" android:textAllCaps="false"/>
        <Button android:textSize="12sp" android:textColor="@android:color/primary_text_dark" android:id="@+id/all_filter_btn" android:background="@color/primaryColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filter" android:drawableTop="@drawable/ic_photo_filter" android:layout_weight="1" android:textAllCaps="false"/>
        <Button android:textSize="12sp" android:textColor="@android:color/primary_text_dark" android:id="@+id/rotate_btn" android:background="@color/primaryColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rotate" android:drawableTop="@drawable/ic_baseline_rotate_right" android:layout_weight="1" android:textAllCaps="false"/>
        <Button android:textSize="12sp" android:textColor="@android:color/primary_text_dark" android:id="@+id/select_all_btn" android:background="@color/primaryColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset" android:drawableTop="@drawable/ic_select_all_img_pager" android:layout_weight="1" android:textAllCaps="false"/>
        <ImageButton android:layout_gravity="center" android:id="@+id/doneBtnIP" android:background="@drawable/round_dict_btn_bg_scroll_act" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="2dp" android:src="@drawable/ic_dict_btn_ip" android:layout_weight="1" android:paddingStart="8dp" android:paddingEnd="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    </LinearLayout>
</FrameLayout>
