<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar_scroll_act" android:background="@color/primaryColor" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" app:theme="@style/ToolbarTheme">
        <FrameLayout android:id="@+id/topBarframeLayout" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/whiteColor" android:ellipsize="end" android:layout_gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/file_name_scroll_act" android:paddingRight="90dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Filename" android:maxLines="1"/>
            <LinearLayout android:layout_gravity="end" android:id="@+id/LL_rightTopBarScroll" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginEnd="10dp">
                <ImageButton android:layout_gravity="center_vertical" android:id="@+id/rename_toolbar_scroll" android:background="@drawable/ic_rename_toolbar_scroll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="7dp"/>
            </LinearLayout>
            <Button android:textSize="12sp" android:textColor="@color/whiteColor" android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/select_all_top_scroll" android:background="@drawable/rect_scroll_act" android:visibility="invisible" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/select_all" android:textAllCaps="true"/>
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/adapterRecyclerView" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <LinearLayout android:layout_gravity="bottom" android:id="@+id/bottom_bar_scrollA" android:background="@color/primaryColor" android:paddingTop="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
            <Button android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/share_toolbar_scroll" android:background="@color/primaryColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share" android:drawableTop="@drawable/ic_share_scroll" android:textAllCaps="false"/>
            <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
            <Button android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/save_btn_scroll" android:background="@color/primaryColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:drawableTop="@drawable/ic_pdf_scroll" android:textAllCaps="false"/>
            <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
            <Button android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/deleteBtnBBarScroll" android:background="@color/primaryColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delete" android:drawableTop="@drawable/ic_delete_bbar_scroll" android:textAllCaps="false"/>
            <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
            <ImageButton android:layout_gravity="center_vertical" android:id="@+id/dictBtnScroll" android:background="@drawable/round_dict_btn_bg_scroll_act" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="2dp" android:src="@drawable/ic_dict_btn_scroll" android:paddingStart="10dp" android:paddingEnd="10dp" android:layout_marginStart="8dp"/>
            <Button android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/modifyScroll" android:background="@color/primaryColor" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit" android:drawableTop="@drawable/ic_rename_toolbar_scroll" android:textAllCaps="false"/>
            <Space android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@+id/fragment" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </FrameLayout>
</LinearLayout>
