<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/result_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/primaryColor"
        app:theme="@style/ToolbarColored">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/frame"
        android:layout_alignParentTop="true"
        android:foregroundGravity="top">

        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scrollbars="vertical"
            android:textSize="18sp" />
    </ScrollView>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <Button
            android:layout_gravity="left"
            android:layout_marginEnd="50dp"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:id="@+id/share_res_text"
            android:background="@color/primaryColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:drawableTop="@drawable/ic_share_scroll"
            android:textAllCaps="false"/>

        <Button
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:id="@+id/url"
            android:visibility="invisible"
            android:background="@color/primaryColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:drawableTop="@drawable/url"
            android:textAllCaps="false"/>


        <Button
            android:layout_gravity="right"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:id="@+id/copy_res_text"
            android:background="@color/primaryColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:drawableTop="@drawable/ic_content_copy_black_24dp"
            android:textAllCaps="false"/>
    </FrameLayout>


</RelativeLayout>